# chunking_cpp

./: .clang-format  .gitignore  BUILDING.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  GNUmakefile  MANIFEST.in  Makefile  Makefile.local  README.md  REQUIREMENTS.md  chunk.hpp  cmake_install.cmake  config.hpp  config.mk  configure  data_structures.hpp  main.cpp  run_tests.sh  setup.py  utils.hpp
.github/workflows/: ci.yml  docs.yml  makefile.yml  test.yml
bindings/python/: chunk_bindings.cpp
docs/html/: README_8md.html  advanced__structures_8hpp.html  advanced__structures_8hpp.js  advanced__structures_8hpp__dep__incl.map  advanced__structures_8hpp__dep__incl.md5  advanced__structures_8hpp__incl.map  advanced__structures_8hpp__incl.md5  advanced__structures_8hpp_source.html  annotated.html  annotated_dup.js  chunk_8hpp.html  chunk_8hpp.js  chunk_8hpp__dep__incl.dot  chunk_8hpp__dep__incl.map  chunk_8hpp__dep__incl.md5  chunk_8hpp__incl.map  chunk_8hpp__incl.md5  chunk_8hpp_source.html  chunk__compression_8hpp.html  chunk__compression_8hpp.js  chunk__compression_8hpp__dep__incl.map  chunk__compression_8hpp__dep__incl.md5  chunk__compression_8hpp__incl.map  chunk__compression_8hpp__incl.md5  chunk__compression_8hpp_source.html  chunk__strategies_8hpp.html  chunk__strategies_8hpp.js  chunk__strategies_8hpp__dep__incl.map  chunk__strategies_8hpp__dep__incl.md5  chunk__strategies_8hpp__incl.map  chunk__strategies_8hpp__incl.md5  chunk__strategies_8hpp_source.html  chunk__windows_8hpp.html  chunk__windows_8hpp.js  chunk__windows_8hpp__dep__incl.map  chunk__windows_8hpp__dep__incl.md5  chunk__windows_8hpp__incl.map  chunk__windows_8hpp__incl.md5  chunk__windows_8hpp_source.html  classChunk-members.html  (+346 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_0.js  (+54 more)
docs/latex/: README_8md.tex  advanced__structures_8hpp.tex  advanced__structures_8hpp__dep__incl.md5  advanced__structures_8hpp__incl.md5  advanced__structures_8hpp_source.tex  annotated.tex  chunk_8hpp.tex  chunk_8hpp__dep__incl.md5  chunk_8hpp__incl.md5  chunk_8hpp_source.tex  chunk__compression_8hpp.tex  chunk__compression_8hpp__dep__incl.md5  chunk__compression_8hpp__incl.md5  chunk__compression_8hpp_source.tex  chunk__strategies_8hpp.tex  chunk__strategies_8hpp__dep__incl.md5  chunk__strategies_8hpp__incl.md5  chunk__strategies_8hpp_source.tex  chunk__windows_8hpp.tex  chunk__windows_8hpp__dep__incl.md5  chunk__windows_8hpp__incl.md5  chunk__windows_8hpp_source.tex  classChunk.tex  classChunkList.tex  classChunkList__coll__graph.md5  classChunk__coll__graph.md5  classCircularBuffer.tex  classPriorityQueue.tex  classSlidingWindow.tex  classadvanced__structures_1_1BloomFilterChunk.tex  classadvanced__structures_1_1BloomFilterChunk__coll__graph.md5  classadvanced__structures_1_1ChunkBPlusTree.tex  classadvanced__structures_1_1ChunkBPlusTree__coll__graph.md5  classadvanced__structures_1_1ChunkDeque.tex  classadvanced__structures_1_1ChunkSkipList.tex  classadvanced__structures_1_1ChunkStack.tex  classadvanced__structures_1_1ChunkTreap.tex  classadvanced__structures_1_1ChunkTreap__coll__graph.md5  classadvanced__structures_1_1FractalPatternsChunk.tex  classadvanced__structures_1_1GraphBasedChunk.tex  (+81 more)
include/: advanced_chunk_strategies.hpp  advanced_structures.hpp  chunk.hpp  chunk_benchmark.hpp  chunk_common.hpp  chunk_compression.hpp  chunk_errors.hpp  chunk_integrations.hpp  chunk_metrics.hpp  chunk_resilience.hpp  chunk_serialization.hpp  chunk_strategies.hpp  chunk_strategy_implementations.hpp  chunk_visualization.hpp  chunk_windows.hpp  config.hpp  config.hpp.in  data_structures.hpp  gpu_chunking.hpp  neural_chunking.hpp  parallel_chunk.hpp  sophisticated_chunking.hpp  sub_chunk_strategies.hpp  utils.hpp  wavelet_chunking.hpp
myproject-1.0/: Makefile
scripts/: pybindings_example.py
src/: benchmark.cpp  chunk_metrics.cpp  chunk_resilience.cpp  chunk_serialization.cpp  chunk_visualization.cpp  chunk_visualization_demo.cpp  demo_gpu_chunking.cpp  demo_neural_chunking.cpp  main.cpp  neural_chunking.cpp  sophisticated_chunking_demo.cpp
tests/: CMakeLists.txt  advanced_chunk_strategies_test.cpp  advanced_structures_test.cpp  chunk_compress_test.cpp  chunk_compression_test.cpp  chunk_strategies_test.cpp  chunk_test.cpp  chunking_methods_sophisticated_test.cpp  conftest.py  data_structures_test.cpp  jagged_array_test.cpp  parallel_chunk_test.cpp  run_tests  run_tests.sh  sub_chunk_strategies_test.cpp  test_chunking.cpp  test_main.cpp  test_metrics.cpp  test_neuralnetwork.cpp  test_resilience.cpp  test_serialization.cpp  test_visualization.cpp  utils_test.cpp
tests/python/: py_bindings.py  test_py_bindings.py
